# Semiconductor_Device_Simulator

./: CMakeLists.txt  README.md
include/: Assembly.hpp  DriftDiffusionPoisson.hpp  Grid.hpp  LDG.hpp  MixedFEM.hpp  ParameterReader.hpp  Parameters.hpp
source/: Assembly.cpp  BiasValues.cpp  DopingProfiles.cpp  DriftDiffusionPoisson.cpp  Generation.cpp  Grid.cpp  LDG.cpp  MixedFEM.cpp  ParameterReader.cpp  main.cpp  test_functions.cpp
